--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
         <span>PHARRELLWILLIAMS.COM</span><!-- span text 'PHARRELLWILLIAMS.COM' -->
 
-        <img src=""<!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" width="800" height="600"><!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span>COLUMBIARECORDS.COM</span><!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" width="400<!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
     </div>
